[package]
name = "pdns-database"
version = "0.1.0"
authors = ["lucas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallet = "0.7.0"
pallet-macros = "0.4"
serde = {version = "1", features = ["derive"]}
sled = "0.34.6"
tantivy = "0.14"
chrono = {version = "0.4.19", features = ["serde"]}
log = "0.4"
env_logger = "0.8.2"
